[package]
name = "abao"
version = "0.1.0"
authors = ["Felix Stegmaier <stegmaier.felix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
scoped_threadpool = "0.1.9"

[dependencies]
owning_ref = "0.4.0"
